# fweh

./: .gitignore  3DRotate.sh  CHANGELOG.md  Cargo.toml  README.md  bible.md  colors.json  frame  justfile  log.lua  magick.lua  video.fish
lua_modules/lib/luarocks/rocks-5.1/: manifest
src/: args.rs  background.rs  error.rs  image_processing.rs  main.rs  shadow.rs  utils.rs
