[package]
name = "fweh"
version = "0.1.0"
edition = "2021"
description = "A tool for framing images with shadows, rounded corners, and backgrounds"
authors = ["Philocalyst"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
image = "0.24"
fast_image_resize = "3.0"
rgb = "0.8"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
tempfile = "3.8"
rayon = "1.8"
# imageproc = "0.25.0"
# quad-to-quad-transformer = "0.4.1"
